# RewardLM

./: .gitignore  Detox_PPO.ipynb  EDA.ipynb  Interpretability.ipynb  README.md  Test_dataset.ipynb  Test_gen_models.ipynb  job_test.py  main_notebook.ipynb  original_script.ipynb  pyproject.toml  requirements.txt  results_plot.ipynb  script0_RL.py  script2_FT.py  script3_FT.py  scriptToxicity.py  script_FT.py  script_RL postFT.py  script_RL.py  script_RL_postFT.py  test.py  test_trained.py
configs/: LaMini-1B_FT.yaml  LaMini-774M_FT.yaml  RedPajama-INCITE-Chat-3B-LoRA-FT.yaml  RedPajama-INCITE-Chat-3B-LoRA-RL.yaml  RedPajama-INCITE-Chat-3B-v1.yaml  debug_FT.yaml  debug_GPT-neo.yaml  debug_RL.yaml  debug_notGPT_FT.yaml  falcon7B.yaml  falcon7b-FT.yaml  falcon7b-RL.yaml
data/: Unique-Multitarget-CONAN.csv
hpc_scripts/: test0.sh
interpretability/: README.md  compute_similarity_API.py  gen_attributes.py  interp_utils.py
logs/: RL_falcon7B.2818043.out  RL_red_pajama.2818044.out  fine-tune-falcon-instruct-7B.2791383.out  fine-tune-red-chat-3B.2742217.out
notebooks/: EDA.ipynb  EDA_DialoConan.ipynb
old_notebooks/: Detox_PPO.ipynb  Test_gen_models.ipynb
result analysis/: results_plot.ipynb
result_analysis/: results_plot.ipynb
results/: measured_toxicity_LaMini-GPT-1.5B_8-bit (prompted).csv  measured_toxicity_LaMini-GPT-1.5B_8-bit.csv  measured_toxicity_LaMini-GPT-124M_bfloat16 (prompted2).csv  measured_toxicity_LaMini-GPT-124M_bfloat16.csv  measured_toxicity_LaMini-GPT-774M_8-bit_custom0.csv  measured_toxicity_RedPajama-INCITE-Instruct-3B-v1_8-bit.csv  (+5 more)
(+113 files in other folders)
