[tool.poetry]
name = "rewardlm"
version = "0.1.0"
description = ""
authors = ["daniel <scalena99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
datasets = "^2.12.0"
pandas = "^2.0.1"
torch = "^2.0.1"
tqdm = "^4.65.0"
transformers = "^4.28.1"
accelerate = "0.20.3"
bitsandbytes = "^0.38.1"
peft = "^0.3.0"
loralib = "^0.1.1"
numpy = "^1.24.3"
wandb = "^0.15.2"
trl = "^0.4.1"
ipykernel = "^6.23.1"
matplotlib = "^3.7.1"
ipywidgets = "^8.0.6"
jupyter = "^1.0.0"
huggingface-hub = "^0.14.1"
sentencepiece = "^0.1.99"
pynvml = "^11.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
